@@ -4,6 +4,10 @@ The Benchmark contrib package contains code for benchmarking Lucene in a variety
 
 $Id:$
 
+11/07/2009
+  LUCENE-2042: Added print.hits.field, to print each hit from the
+  Search* tasks.  (Mike McCandless)
+
 11/04/2009
   LUCENE-2029: Added doc.body.stored and doc.body.tokenized; each
   falls back to the non-body variant as its default.  (Mike McCandless)
